ext/mvc/model/query/scanner.c
/* Generated by re2c 0.13.5 on Sat Mar 26 11:29:15 2016 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#include "php_phalcon.h"

#include "mvc/model/query/scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int phql_get_token(phql_scanner_state *s, phql_scanner_token *token) {

	char *q = YYCURSOR;
	int status = PHQL_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHQL_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
/* #line 40 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  24,  24,  24,  24,  24,  24,  24, 
				 24,  26,  26,  24,  24,  26,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 26,  24,   8,  24,  24,  24,  24,  16, 
				 24,  24,  24,  24,  24,  56,  24,  24, 
				252, 252, 252, 252, 252, 252, 252, 252, 
				252, 252,  28,  24,  24,  24,  24,  24, 
				 24, 188, 188, 188, 188, 188, 188,  60, 
				 60,  60,  60,  60,  60,  60,  60,  60, 
				 60,  60,  60,  60,  60,  60,  60,  60, 
				 60,  60,  60,  24,   4,  24,  24,  60, 
				 24, 188, 188, 188, 188, 188, 188,  60, 
				 60,  60,  60,  60,  60,  60,  60,  60, 
				 60,  60,  60,  60,  60,  60,  60,  60, 
				188,  60,  60,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
				 24,  24,  24,  24,  24,  24,  24,  24, 
			};

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy71;
			case '\t':
			case '\n':
			case '\r':
			case ' ':	goto yy69;
			case '!':	goto yy52;
			case '"':	goto yy31;
			case '%':	goto yy44;
			case '&':	goto yy63;
			case '\'':	goto yy32;
			case '(':	goto yy48;
			case ')':	goto yy50;
			case '*':	goto yy40;
			case '+':	goto yy36;
			case ',':	goto yy46;
			case '-':	goto yy38;
			case '.':	goto yy11;
			case '/':	goto yy42;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy4;
			case ':':	goto yy15;
			case '<':	goto yy54;
			case '=':	goto yy58;
			case '>':	goto yy56;
			case '?':	goto yy13;
			case '@':	goto yy60;
			case 'A':
			case 'a':	goto yy5;
			case 'B':
			case 'b':	goto yy6;
			case 'C':
			case 'c':	goto yy7;
			case 'D':
			case 'd':	goto yy8;
			case 'E':
			case 'e':	goto yy9;
			case 'F':
			case 'f':	goto yy2;
			case 'G':
			case 'g':	goto yy24;
			case 'H':
			case 'h':	goto yy25;
			case 'I':
			case 'i':	goto yy20;
			case 'J':
			case 'j':	goto yy28;
			case 'K':
			case 'M':
			case 'P':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'k':
			case 'm':
			case 'p':
			case 'q':
			case 'y':
			case 'z':	goto yy34;
			case 'L':
			case 'l':	goto yy26;
			case 'N':
			case 'n':	goto yy27;
			case 'O':
			case 'o':	goto yy23;
			case 'R':
			case 'r':	goto yy29;
			case 'S':
			case 's':	goto yy19;
			case 'T':
			case 't':	goto yy30;
			case 'U':
			case 'u':	goto yy17;
			case 'V':
			case 'v':	goto yy21;
			case 'W':
			case 'w':	goto yy22;
			case '[':	goto yy35;
			case '\\':	goto yy33;
			case '^':	goto yy67;
			case 'x':	goto yy10;
			case '|':	goto yy61;
			case '~':	goto yy65;
			default:	goto yy73;
			}
yy2:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 'U') {
				if (yych <= 'O') {
					if (yych == 'A') goto yy321;
					if (yych <= 'N') goto yy239;
					goto yy322;
				} else {
					if (yych == 'R') goto yy323;
					if (yych <= 'T') goto yy239;
					goto yy324;
				}
			} else {
				if (yych <= 'o') {
					if (yych == 'a') goto yy321;
					if (yych <= 'n') goto yy239;
					goto yy322;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy239;
						goto yy323;
					} else {
						if (yych == 'u') goto yy324;
						goto yy239;
					}
				}
			}
yy3:
/* #line 49 "scanner.re" */
			{
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			if (token->len > 2 && !memcmp(token->value, "0x", 2)) {
				token->opcode = PHQL_T_HINTEGER;
			} else {
				int i, alpha = 0;
				for (i = 0; i < token->len; i++) {
					unsigned char ch = token->value[i];
					if (!((ch >= '0') && (ch <= '9'))) {
						alpha = 1;
						break;
		 			}
				}
				if (alpha) {
					token->opcode = PHQL_T_IDENTIFIER;
				} else {
					token->opcode = PHQL_T_INTEGER;
				}
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 227 "scanner.c" */
yy4:
			yych = *++YYCURSOR;
			if (yych <= '@') {
				if (yych <= '.') {
					if (yych <= '-') goto yy3;
					goto yy315;
				} else {
					if (yych <= '/') goto yy3;
					if (yych <= '9') goto yy317;
					goto yy3;
				}
			} else {
				if (yych <= 'f') {
					if (yych <= 'F') goto yy319;
					if (yych <= '`') goto yy3;
					goto yy319;
				} else {
					if (yych == 'x') goto yy319;
					goto yy3;
				}
			}
yy5:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych <= 'L') {
					if (yych == 'G') goto yy298;
					if (yych <= 'K') goto yy239;
					goto yy299;
				} else {
					if (yych == 'N') goto yy300;
					if (yych <= 'R') goto yy239;
					goto yy301;
				}
			} else {
				if (yych <= 'l') {
					if (yych == 'g') goto yy298;
					if (yych <= 'k') goto yy239;
					goto yy299;
				} else {
					if (yych <= 'n') {
						if (yych <= 'm') goto yy239;
						goto yy300;
					} else {
						if (yych == 's') goto yy301;
						goto yy239;
					}
				}
			}
yy6:
			yych = *++YYCURSOR;
			if (yych <= 'Y') {
				if (yych == 'E') goto yy289;
				if (yych <= 'X') goto yy239;
				goto yy290;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy239;
					goto yy289;
				} else {
					if (yych == 'y') goto yy290;
					goto yy239;
				}
			}
yy7:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych <= 'N') {
					if (yych == 'A') goto yy271;
					goto yy239;
				} else {
					if (yych <= 'O') goto yy272;
					if (yych <= 'Q') goto yy239;
					goto yy273;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'a') goto yy271;
					goto yy239;
				} else {
					if (yych <= 'o') goto yy272;
					if (yych == 'r') goto yy273;
					goto yy239;
				}
			}
yy8:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy254;
				if (yych <= 'H') goto yy239;
				goto yy255;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy239;
					goto yy254;
				} else {
					if (yych == 'i') goto yy255;
					goto yy239;
				}
			}
yy9:
			yych = *++YYCURSOR;
			if (yych <= 'X') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy240;
					goto yy239;
				} else {
					if (yych <= 'N') goto yy241;
					if (yych <= 'W') goto yy239;
					goto yy242;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy240;
					goto yy239;
				} else {
					if (yych <= 'n') goto yy241;
					if (yych == 'x') goto yy243;
					goto yy239;
				}
			}
yy10:
			yych = *++YYCURSOR;
			goto yy239;
yy11:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '/') goto yy12;
			if (yych <= '9') goto yy235;
yy12:
/* #line 421 "scanner.re" */
			{
			token->opcode = PHQL_T_DOT;
			return 0;
		}
/* #line 361 "scanner.c" */
yy13:
			++YYCURSOR;
			if (yybm[0+(yych = *YYCURSOR)] & 64) {
				goto yy232;
			}
yy14:
/* #line 546 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 373 "scanner.c" */
yy15:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yybm[0+yych] & 32) {
				goto yy228;
			}
yy16:
/* #line 426 "scanner.re" */
			{
			token->opcode = PHQL_T_COLON;
			return 0;
		}
/* #line 386 "scanner.c" */
yy17:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 'S') {
				if (yych == 'P') goto yy217;
				if (yych <= 'R') goto yy100;
				goto yy218;
			} else {
				if (yych <= 'p') {
					if (yych <= 'o') goto yy100;
					goto yy217;
				} else {
					if (yych == 's') goto yy218;
					goto yy100;
				}
			}
yy18:
/* #line 369 "scanner.re" */
			{
			token->opcode = PHQL_T_IDENTIFIER;
			if ((YYCURSOR - q) > 1) {
				if (q[0] == '\\') {
					token->value = estrndup(q + 1, YYCURSOR - q - 1);
					token->len = YYCURSOR - q - 1;
				} else {
					token->value = estrndup(q, YYCURSOR - q);
					token->len = YYCURSOR - q;
				}
			} else {
				token->value = estrndup(q, YYCURSOR - q);
				token->len = YYCURSOR - q;
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 421 "scanner.c" */
yy19:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy209;
			if (yych == 'e') goto yy209;
			goto yy100;
yy20:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy188;
					goto yy100;
				} else {
					if (yych <= 'N') goto yy189;
					if (yych <= 'R') goto yy100;
					goto yy191;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy188;
					goto yy100;
				} else {
					if (yych <= 'n') goto yy189;
					if (yych == 's') goto yy191;
					goto yy100;
				}
			}
yy21:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy182;
			if (yych == 'a') goto yy182;
			goto yy100;
yy22:
			yych = *++YYCURSOR;
			if (yych == 'H') goto yy175;
			if (yych == 'h') goto yy175;
			goto yy100;
yy23:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'N') {
					if (yych == 'F') goto yy156;
					if (yych <= 'M') goto yy100;
					goto yy157;
				} else {
					if (yych == 'R') goto yy159;
					if (yych <= 'T') goto yy100;
					goto yy161;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy156;
					if (yych <= 'm') goto yy100;
					goto yy157;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy100;
						goto yy159;
					} else {
						if (yych == 'u') goto yy161;
						goto yy100;
					}
				}
			}
yy24:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy151;
			if (yych == 'r') goto yy151;
			goto yy100;
yy25:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy145;
			if (yych == 'a') goto yy145;
			goto yy100;
yy26:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy133;
				if (yych <= 'H') goto yy100;
				goto yy134;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy100;
					goto yy133;
				} else {
					if (yych == 'i') goto yy134;
					goto yy100;
				}
			}
yy27:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy126;
				if (yych <= 'T') goto yy100;
				goto yy127;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy100;
					goto yy126;
				} else {
					if (yych == 'u') goto yy127;
					goto yy100;
				}
			}
yy28:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy122;
			if (yych == 'o') goto yy122;
			goto yy100;
yy29:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy117;
			if (yych == 'i') goto yy117;
			goto yy100;
yy30:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'H') goto yy109;
				if (yych <= 'Q') goto yy100;
				goto yy110;
			} else {
				if (yych <= 'h') {
					if (yych <= 'g') goto yy100;
					goto yy109;
				} else {
					if (yych == 'r') goto yy110;
					goto yy100;
				}
			}
yy31:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy14;
			goto yy107;
yy32:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy14;
			goto yy102;
yy33:
			yych = *++YYCURSOR;
			if (yych <= '^') {
				if (yych <= '@') goto yy14;
				if (yych <= 'Z') goto yy99;
				goto yy14;
			} else {
				if (yych == '`') goto yy14;
				if (yych <= 'z') goto yy99;
				goto yy14;
			}
yy34:
			yych = *++YYCURSOR;
			goto yy100;
yy35:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '\\') {
				if (yych <= '@') goto yy14;
				if (yych == '[') goto yy14;
				goto yy94;
			} else {
				if (yych <= '_') {
					if (yych <= '^') goto yy14;
					goto yy94;
				} else {
					if (yych <= '`') goto yy14;
					if (yych <= 'z') goto yy94;
					goto yy14;
				}
			}
yy36:
			++YYCURSOR;
/* #line 396 "scanner.re" */
			{
			token->opcode = PHQL_T_ADD;
			return 0;
		}
/* #line 598 "scanner.c" */
yy38:
			++YYCURSOR;
/* #line 401 "scanner.re" */
			{
			token->opcode = PHQL_T_SUB;
			return 0;
		}
/* #line 606 "scanner.c" */
yy40:
			++YYCURSOR;
/* #line 406 "scanner.re" */
			{
			token->opcode = PHQL_T_MUL;
			return 0;
		}
/* #line 614 "scanner.c" */
yy42:
			++YYCURSOR;
/* #line 411 "scanner.re" */
			{
			token->opcode = PHQL_T_DIV;
			return 0;
		}
/* #line 622 "scanner.c" */
yy44:
			++YYCURSOR;
/* #line 416 "scanner.re" */
			{
			token->opcode = PHQL_T_MOD;
			return 0;
		}
/* #line 630 "scanner.c" */
yy46:
			++YYCURSOR;
/* #line 431 "scanner.re" */
			{
			token->opcode = PHQL_T_COMMA;
			return 0;
		}
/* #line 638 "scanner.c" */
yy48:
			++YYCURSOR;
/* #line 436 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 646 "scanner.c" */
yy50:
			++YYCURSOR;
/* #line 441 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 654 "scanner.c" */
yy52:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '!') goto yy90;
			if (yych == '=') goto yy92;
/* #line 511 "scanner.re" */
			{
			token->opcode = PHQL_T_NOT;
			return 0;
		}
/* #line 664 "scanner.c" */
yy54:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '<') goto yy55;
			if (yych <= '=') goto yy86;
			if (yych <= '>') goto yy88;
yy55:
/* #line 466 "scanner.re" */
			{
			token->opcode = PHQL_T_LESS;
			return 0;
		}
/* #line 676 "scanner.c" */
yy56:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy84;
/* #line 471 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATER;
			return 0;
		}
/* #line 685 "scanner.c" */
yy58:
			++YYCURSOR;
/* #line 476 "scanner.re" */
			{
			token->opcode = PHQL_T_EQUALS;
			return 0;
		}
/* #line 693 "scanner.c" */
yy60:
			yych = *++YYCURSOR;
			if (yych == '>') goto yy80;
			if (yych == '@') goto yy82;
			goto yy14;
yy61:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '|') goto yy78;
/* #line 531 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_OR;
			return 0;
		}
/* #line 707 "scanner.c" */
yy63:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '&') goto yy76;
/* #line 526 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_AND;
			return 0;
		}
/* #line 716 "scanner.c" */
yy65:
			++YYCURSOR;
/* #line 516 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_NOT;
			return 0;
		}
/* #line 724 "scanner.c" */
yy67:
			++YYCURSOR;
/* #line 521 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_XOR;
			return 0;
		}
/* #line 732 "scanner.c" */
yy69:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy75;
yy70:
/* #line 536 "scanner.re" */
			{
			token->opcode = PHQL_T_IGNORE;
			return 0;
		}
/* #line 743 "scanner.c" */
yy71:
			++YYCURSOR;
/* #line 541 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_EOF;
			break;
		}
/* #line 751 "scanner.c" */
yy73:
			yych = *++YYCURSOR;
			goto yy14;
yy74:
			++YYCURSOR;
			yych = *YYCURSOR;
yy75:
			if (yybm[0+yych] & 2) {
				goto yy74;
			}
			goto yy70;
yy76:
			++YYCURSOR;
/* #line 491 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_AND;
			return 0;
		}
/* #line 770 "scanner.c" */
yy78:
			++YYCURSOR;
/* #line 486 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_OR;
			return 0;
		}
/* #line 778 "scanner.c" */
yy80:
			++YYCURSOR;
/* #line 501 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_CONTAINS_ANOTHER;
			return 0;
		}
/* #line 786 "scanner.c" */
yy82:
			++YYCURSOR;
/* #line 481 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_MATCHES;
			return 0;
		}
/* #line 794 "scanner.c" */
yy84:
			++YYCURSOR;
/* #line 461 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATEREQUAL;
			return 0;
		}
/* #line 802 "scanner.c" */
yy86:
			++YYCURSOR;
/* #line 456 "scanner.re" */
			{
			token->opcode = PHQL_T_LESSEQUAL;
			return 0;
		}
/* #line 810 "scanner.c" */
yy88:
			++YYCURSOR;
/* #line 451 "scanner.re" */
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
/* #line 818 "scanner.c" */
yy90:
			++YYCURSOR;
/* #line 496 "scanner.re" */
			{
